# fast_admin

./: .setup.cfg  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
examples/: __init__.py  index.jinja2  init_in_app.py
fast_admin/: __init__.py  app.py  connection_utils.py  di.py  routes.py  sql_utils.py  urls.py
fast_admin/admin/: __init__.py  api_models.py
fast_admin/admin/view/: __init__.py  get_schema.py
fast_admin/pg/: __init__.py
fast_admin/pg/discover/: __init__.py  map_utils.py  models.py  sql_utils.py  tables.py
tests/: conftest.py  test_core_app.py
