[tool.poetry]
name = "fast_admin"
version = "0.0.1"
description = ""
authors = ["Alexey Lebedev <devspades@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.61.1"
pydantic = "^1.6.1"
databases = "^0.3.2"
Inject = "^4.3.1"
asyncpg = "^0.21.0"
httpx = "^0.16.1"
Jinja2 = "^2.11.2"
uvicorn = "^0.12.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
mypy = "^0.790"
pytest = "^6.1.1"
requests = "^2.24.0"
PyHamcrest = "^2.0.2"
pytest-asyncio = "^0.14.0"

[tool.poetry.scripts]
example-init-in-app = "examples.init_in_app:init_app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
